fix layout issues in Safari

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,6 @@
     padding: 80px 40px 180px 40px;
 
     @media screen and (max-width: $breakpoint-medium) {
-        padding: 40px 20px 100px 20px;
+        padding: 40px 24px 100px 24px;
     }
 }
