--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -4,7 +4,7 @@ $amaranth: 'Amaranth', sans-serif;
 $serif: 'Vidaloka', serif;
 
 // Dimensions
-$content-width: 880px;
+$content-width: 900px;
 
 // Breakpoints
 $breakpoint-medium: $content-width;
